do so, a version of the gu library (the mini GLUT included in the reference implementation) has
been added.

In addition, a couple of defects that showed up in those examples have been addressed:

1001348 - By default, smooth shading should be enabled
1001352 - movelight example is rendered incorrectly
1001351 - alpha3d example does not render correctly
1001354 - Stray red pixels in examples


Version 0.80
------------

This version constitutes a major milestone for Vincent. First of all, Vincent has become
feature complete and can pass the full OpenGL ES conformance test in internal runs. From this
point on, all releases of Vincent will be fully regression tested against the conformance
test.

Second, first steps towards support for Symbian has been added; specifically support for implementations
of Nokia's Series 60 platform. The implementations is not fully working yet, but at least will compile
without errors. If you are interested in completing this port, please contact the project administrator.

This version addresses the following issues:

980877 - Mipmaps Selection test failed.
980878 - Mipmaps Interpolation test failed.
996378 - Color buffer is effectively 16-bit
996379 - Trap exceptions when context not set.
997772 - compressed NULL texture fails.

Notes:

1.) Even though this build passes the mipmap interpolation test from the conformance test, tri-linear
mipmapping is still not implemented yet. This should become available soon.

2.) Users of previous builds of this library will notice a substantial reduction in performance (~15%)
compared to previous builds when using mipmapping. This is due to the fact that the current build will
perform mipmap selection on a per-pixel base; more precisely, per linearly interpolated sub-span of
each scan line. The plan is to introduce several configurations, which will be either fully-conformant
but slower, or not fully conformant but faster.
